[package]
name = "optcast-reduction-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aligned_box = "0.2.1"
clap = { version = "4.4.14", features = ["derive"] }
env_logger = "0.10.1"
half = { version = "2.3.1", features = ["num-traits"] }
libc = "0.2.152"
log = "0.4.20"
nccl-net-sys = { path = "nccl-net-sys", version = "0.1.0" }
num-traits = "0.2.17"

[build-dependencies]
bindgen = { version = "0.69.1" }
